# gya

./: .gitmodules  0deg-ish.pcap  Cargo.toml  README.md  projektplan.typ  stipendieansökan.typ  test.pcap
Hands-on Wireless Sensing/ch.3. CSI Features/: main.m
Hands-on Wireless Sensing/ch.3. CSI Features/data/: csi_feature_test.mat
Hands-on Wireless Sensing/ch.3. CSI Features/functions/: naive_aoa.m  naive_spectrum.m  naive_tof.m
Hands-on Wireless Sensing/ch.4. CSI Sanitization/: main.m
Hands-on Wireless Sensing/ch.4. CSI Sanitization/data/: calib_template_test.mat
Hands-on Wireless Sensing/ch.4. CSI Sanitization/functions/: agc_calib.m  cfo_calib.m  naive_aoa.m  naive_intrusion.m  nonlinear_calib.m  rco_calib.m  set_template.m  sto_calib_div.m  sto_calib_mul.m
Hands-on Wireless Sensing/ch.5. Deep Learning Algorithms/: Adversarial.py  CNN_RNN.py  README.md  SEN_TEST.py  SEN_trainer.py
csi/: Cargo.toml  trace.pcap
csi/fuzz/: Cargo.toml
csi/fuzz/fuzz_targets/: chanspec.rs
csi/src/: frame.rs  ieee80211.rs  lib.rs  main.rs  params.rs  proc.rs
dumpster/: Cargo.toml
dumpster/src/: csi.rs  lib.rs  main.rs  params.rs
interferens/: Cargo.toml  README.md
interferens/src/: main.rs
main/: bibliography.bib  bibliography.yml  main.typ  template.typ
main/snippets/: aoa.rs
makecsiparams/: Cargo.toml
makecsiparams-sys/: Cargo.toml  build.rs  makecsiparams.h
makecsiparams-sys/makecsiparams/: makecsiparams.c  makecsiparams.h
makecsiparams/src/: lib.rs
nexmon-test/: Cargo.toml  build.rs  out.txt  unpack.c  wrapper.h
nexmon-test/fuzz/: Cargo.toml
nexmon-test/fuzz/fuzz_targets/: chanspec.rs
nexmon-test/nexmon-test-sys/: Cargo.toml  build.rs  nexmon.c  wiros.c  wrapper.h
nexmon-test/src/: lib.rs
rt-ac86u/: Cargo.toml
rt-ac86u/src/: lib.rs
sensor/: Cargo.toml  id_rsa  id_rsa.pub  test.sh
sensor/src/: main.rs  proc.rs  read.rs
