[workspace]
resolver = "2"
members = ["csi", "sensor", "nexmon-test", "nexmon-test/nexmon-test-sys", "rt-ac86u", "makecsiparams-sys"]

[workspace.dependencies]
csi = { path = "csi" }

[patch.crates-io]
russh = { git = "https://github.com/akeamc/russh" }
russh-keys = { git = "https://github.com/akeamc/russh" }
