[workspace]
resolver = "2"
members = ["csi", "sensor", "nexmon-test", "nexmon-test/nexmon-test-sys", "rt-ac86u", "makecsiparams-sys"]

[workspace.dependencies]
csi = { path = "csi" }

[patch.crates-io]
async-ssh2-tokio = { git = "https://github.com/akeamc/async-ssh2-tokio" }
russh = { git = "https://github.com/warp-tech/russh" }
russh-cryptovec = { git = "https://github.com/warp-tech/russh" }
russh-keys = { git = "https://github.com/warp-tech/russh" }
