[workspace]
resolver = "2"
members = [
    "csi",
    "interferens",
    "makecsiparams-sys",
    "nexmon-test",
    "nexmon-test/nexmon-test-sys",
    "rt-ac86u",
    "sensor",
]

[workspace.dependencies]
csi = { path = "csi" }

[patch.crates-io]
async-ssh2-tokio = { git = "https://github.com/akeamc/async-ssh2-tokio" }
russh = { git = "https://github.com/warp-tech/russh" }
russh-cryptovec = { git = "https://github.com/warp-tech/russh" }
russh-keys = { git = "https://github.com/warp-tech/russh" }
