[package]
name = "csi"
version = "0.1.0"
edition = "2021"

[dependencies]
arbitrary = { version = "1", optional = true, features = ["derive"] }
base64 = "0.21"
bitflags = "2.4"
macaddr = "1.0"
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
num-complex = "0.4"
num-traits = "0.2"
rustfft = "6.2.0"
thiserror = "1.0"
uom = "0.35.0"
