[package]
name = "sensor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-ssh2-tokio = { version = "0.8.5", features = ["openssl"] }
async-stream = "0.3.5"
atomic-counter = "1.0.1"
clap = { version = "4.4.12", features = ["derive"] }
csi.workspace = true
eframe = "0.25.0"
egui = "0.25.0"
egui_plot = "0.25.0"
futures = "0.3.29"
macaddr = "1.0.1"
ndarray = "0.15.6"
num-complex = "0.4.4"
num-traits = "0.2.17"
pcap-file-tokio = "0.1.0"
rt-ac86u = { path = "../rt-ac86u" }
russh = "0.41.0-beta.2"
rustfft = "6.2.0"
tokio = { version = "1.35.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
