[package]
name = "sensor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-ssh2-tokio = { version = "0.8.5", features = ["openssl"] }
async-stream = "0.3.5"
atomic-counter = "1.0.1"
clap = { version = "4.4.12", features = ["derive"] }
colorgrad = "0.6.2"
csi.workspace = true
csv = "1.3.0"
eframe = "0.25.0"
egui = "0.25.0"
egui_plot = "0.25.0"
futures = "0.3.29"
macaddr = "1.0.1"
ndarray = "0.15.6"
ndhistogram = "0.9.0"
num-complex = "0.4.4"
num-traits = "0.2.17"
pcap-file-tokio = "0.1.0"
plotters = "0.3.5"
rand = "0.8.5"
rand_distr = "0.4.3"
rt-ac86u = { path = "../rt-ac86u" }
russh = "0.41.0-beta.2"
rustfft = "6.2.0"
tokio = { version = "1.35.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uom = "0.35.0"
